esp-idf/esp32cam_security_gate/build/log/idf_py_stdout_output_84542
[1/12] Performing build step for 'bootloader'
[1/1] cd /home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/build/bootloader/esp-idf/esptool_py && /home/tvconss/.espressif/python_env/idf5.3_py3.12_env/bin/python /home/tvconss/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/build/bootloader/bootloader.bin
Bootloader binary size 0x6730 bytes. 0x8d0 bytes (8%) free.
[2/12] Building C object esp-idf/config_http_client/CMakeFiles/__idf_config_http_client.dir/config_http_client.c.obj
FAILED: esp-idf/config_http_client/CMakeFiles/__idf_config_http_client.dir/config_http_client.c.obj 
/home/tvconss/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/build/config -I/home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/main/components/config_http_client/include -I/home/tvconss/esp/esp-idf/components/newlib/platform_include -I/home/tvconss/esp/esp-idf/components/freertos/config/include -I/home/tvconss/esp/esp-idf/components/freertos/config/include/freertos -I/home/tvconss/esp/esp-idf/components/freertos/config/xtensa/include -I/home/tvconss/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/tvconss/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/tvconss/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/tvconss/esp/esp-idf/components/freertos/esp_additions/include -I/home/tvconss/esp/esp-idf/components/esp_hw_support/include -I/home/tvconss/esp/esp-idf/components/esp_hw_support/include/soc -I/home/tvconss/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/tvconss/esp/esp-idf/components/esp_hw_support/dma/include -I/home/tvconss/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/tvconss/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/tvconss/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/tvconss/esp/esp-idf/components/heap/include -I/home/tvconss/esp/esp-idf/components/log/include -I/home/tvconss/esp/esp-idf/components/soc/include -I/home/tvconss/esp/esp-idf/components/soc/esp32 -I/home/tvconss/esp/esp-idf/components/soc/esp32/include -I/home/tvconss/esp/esp-idf/components/hal/platform_port/include -I/home/tvconss/esp/esp-idf/components/hal/esp32/include -I/home/tvconss/esp/esp-idf/components/hal/include -I/home/tvconss/esp/esp-idf/components/esp_rom/include -I/home/tvconss/esp/esp-idf/components/esp_rom/include/esp32 -I/home/tvconss/esp/esp-idf/components/esp_rom/esp32 -I/home/tvconss/esp/esp-idf/components/esp_common/include -I/home/tvconss/esp/esp-idf/components/esp_system/include -I/home/tvconss/esp/esp-idf/components/esp_system/port/soc -I/home/tvconss/esp/esp-idf/components/esp_system/port/include/private -I/home/tvconss/esp/esp-idf/components/xtensa/esp32/include -I/home/tvconss/esp/esp-idf/components/xtensa/include -I/home/tvconss/esp/esp-idf/components/xtensa/deprecated_include -I/home/tvconss/esp/esp-idf/components/esp_timer/include -I/home/tvconss/esp/esp-idf/components/lwip/include -I/home/tvconss/esp/esp-idf/components/lwip/include/apps -I/home/tvconss/esp/esp-idf/components/lwip/include/apps/sntp -I/home/tvconss/esp/esp-idf/components/lwip/lwip/src/include -I/home/tvconss/esp/esp-idf/components/lwip/port/include -I/home/tvconss/esp/esp-idf/components/lwip/port/freertos/include -I/home/tvconss/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/tvconss/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/tvconss/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/tvconss/esp/esp-idf/components/esp_http_client/include -I/home/tvconss/esp/esp-idf/components/esp_event/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og -fno-shrink-wrap -fmacro-prefix-map=/home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate=. -fmacro-prefix-map=/home/tvconss/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/config_http_client/CMakeFiles/__idf_config_http_client.dir/config_http_client.c.obj -MF esp-idf/config_http_client/CMakeFiles/__idf_config_http_client.dir/config_http_client.c.obj.d -o esp-idf/config_http_client/CMakeFiles/__idf_config_http_client.dir/config_http_client.c.obj -c /home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/main/components/config_http_client/config_http_client.c
/home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/main/components/config_http_client/config_http_client.c:44:33: error: static declaration of 'http_webserver_config' follows non-static declaration
   44 | static esp_http_client_config_t http_webserver_config = {
      |                                 ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/main/components/config_http_client/config_http_client.c:1:
/home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/main/components/config_http_client/include/config_http_client.h:5:26: note: previous declaration of 'http_webserver_config' with type 'esp_http_client_config_t'
    5 | esp_http_client_config_t http_webserver_config;
      |                          ^~~~~~~~~~~~~~~~~~~~~
/home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/main/components/config_http_client/config_http_client.c:44:33: warning: 'http_webserver_config' defined but not used [-Wunused-variable]
   44 | static esp_http_client_config_t http_webserver_config = {
      |                                 ^~~~~~~~~~~~~~~~~~~~~
[3/12] No install step for 'bootloader'
[4/12] Building C object esp-idf/setup_rc522/CMakeFiles/__idf_setup_rc522.dir/setup_rc522.c.obj
/home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/main/components/setup_rc522/setup_rc522.c: In function 'setup_rc522':
/home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/main/components/setup_rc522/setup_rc522.c:50:54: warning: passing argument 3 of 'rc522_register_events' from incompatible pointer type [-Wincompatible-pointer-types]
   50 |      rc522_register_events(scanner, RC522_EVENT_ANY, rc522_handler, on_tag_scanned);
      |                                                      ^~~~~~~~~~~~~
      |                                                      |
      |                                                      void (*)(void (*)(uint64_t), const char *, int32_t,  void *) {aka void (*)(void (*)(long long unsigned int), const char *, long int,  void *)}
In file included from /home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/main/components/setup_rc522/include/setup_rc522.h:1,
                 from /home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/esp32cam_security_gate/main/components/setup_rc522/setup_rc522.c:1:
/home/tvconss/Workspace/sensor_iot_trong_cong_nghiep_det_may/esp-idf/components/esp-idf-rc522/include/rc522.h:85:96: note: expected 'esp_event_handler_t' {aka 'void (*)(void *, const char *, long int,  void *)'} but argument is of type 'void (*)(void (*)(uint64_t), const char *, int32_t,  void *)' {aka 'void (*)(void (*)(long long unsigned int), const char *, long int,  void *)'}
   85 | esp_err_t rc522_register_events(rc522_handle_t rc522, rc522_event_t event, esp_event_handler_t event_handler, void* event_handler_arg);
      |                                                                            ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
